--- a/SecondTry/SecondTry/MainPage.xaml
+++ b/SecondTry/SecondTry/MainPage.xaml
@@ -6,7 +6,11 @@
     <StackLayout>
         <Button Text = "Нажми!" FontSize="Large" BorderWidth="1"
         HorizontalOptions="Center" VerticalOptions="CenterAndExpand"
-        Clicked="OnButtonClicked" />
+        Clicked="OnButton1Clicked" />
+
+        <Button  FontSize="Large" BorderWidth="1"
+        HorizontalOptions="Center" VerticalOptions="CenterAndExpand"
+        Clicked="OnButton2Clicked" />
     </StackLayout>
 
 </ContentPage>
