--- a/SecondTry/SecondTry/MainPage.xaml
+++ b/SecondTry/SecondTry/MainPage.xaml
@@ -17,11 +17,11 @@
             </Label.FormattedText>
         </Label>
         
-        <Button Text = "Нажми!" FontSize = "Large" BorderWidth="1" Padding="100"  
+        <Button x:Name="button1" Text = "Нажми!" FontSize = "Large" BorderWidth="1" Padding="100"  
         HorizontalOptions="Center" VerticalOptions="CenterAndExpand"
         Clicked="OnButton1Clicked" />
         
-        <Button Text="Ну попробуй?" FontSize="Large" BorderWidth="1"
+        <Button x:Name="button2" Text="Ну попробуй?" FontSize="Large" BorderWidth="1"
         HorizontalOptions="Center" VerticalOptions="CenterAndExpand"
         Clicked="OnButton2Clicked" />
     </StackLayout>
