--- a/SecondTry/SecondTry/MainPage.xaml
+++ b/SecondTry/SecondTry/MainPage.xaml
@@ -4,12 +4,12 @@
              x:Class="SecondTry.MainPage">
     
     <StackLayout>
-        <Button Text="Понедельник" Padding="10, 10, 10, 10" x:Name="MondayButton"></Button>
-        <Button Text="Вторник" Padding="10, 10, 10, 10" x:Name="TuesdayButton"></Button>
-        <Button Text="Среда" Padding="10, 10, 10, 10" x:Name="WednesdayButton"></Button>
-        <Button Text="Четверг" Padding="10, 10, 10, 10" x:Name="ThursdayButton"></Button>
-        <Button Text="Пятница" Padding="10, 10, 10, 10" x:Name="FridayButton"></Button>
-        <Button Text="Суббота" Padding="10, 10, 10, 10" x:Name="SaturdayButton"></Button>
+        <Button Text="Понедельник" Padding="10, 10, 10, 10" x:Name="MondayButton" Clicked="OnButtonClicked"></Button>
+        <Button Text="Вторник" Padding="10, 10, 10, 10" x:Name="TuesdayButton" Clicked="OnButtonClicked"></Button>
+        <Button Text="Среда" Padding="10, 10, 10, 10" x:Name="WednesdayButton" Clicked="OnButtonClicked"></Button>
+        <Button Text="Четверг" Padding="10, 10, 10, 10" x:Name="ThursdayButton" Clicked="OnButtonClicked"></Button>
+        <Button Text="Пятница" Padding="10, 10, 10, 10" x:Name="FridayButton" Clicked="OnButtonClicked"></Button>
+        <Button Text="Суббота" Padding="10, 10, 10, 10" x:Name="SaturdayButton" Clicked="OnButtonClicked"></Button>
     </StackLayout>
 
 </ContentPage>
