--- a/SecondTry/SecondTry/MainPage.xaml
+++ b/SecondTry/SecondTry/MainPage.xaml
@@ -2,14 +2,32 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SecondTry.MainPage">
-    
-    <StackLayout>
-        <Button Text="Понедельник" Padding="10, 10, 10, 10" x:Name="MondayButton" Clicked="OnButtonClicked"></Button>
-        <Button Text="Вторник" Padding="10, 10, 10, 10" x:Name="TuesdayButton" Clicked="OnButtonClicked"></Button>
-        <Button Text="Среда" Padding="10, 10, 10, 10" x:Name="WednesdayButton" Clicked="OnButtonClicked"></Button>
-        <Button Text="Четверг" Padding="10, 10, 10, 10" x:Name="ThursdayButton" Clicked="OnButtonClicked"></Button>
-        <Button Text="Пятница" Padding="10, 10, 10, 10" x:Name="FridayButton" Clicked="OnButtonClicked"></Button>
-        <Button Text="Суббота" Padding="10, 10, 10, 10" x:Name="SaturdayButton" Clicked="OnButtonClicked"></Button>
+
+    <StackLayout Orientation="Vertical" Margin="0, 450, 0, 0">
+        <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
+            <Button Text="Понедельник" Padding="30" x:Name="MondayButton" WidthRequest="200"
+                    Clicked="OnButtonClicked" TextColor="Black" Margin="0"
+                    BackgroundColor="OrangeRed" BorderWidth="1" BorderColor="Gray"></Button>
+            <Button Text="Вторник" Padding="30" WidthRequest="190" x:Name="TuesdayButton" 
+                    Clicked="OnButtonClicked" TextColor="Black" Margin="0"
+                    BackgroundColor="OrangeRed" BorderWidth="1" BorderColor="Gray"></Button>
+        </StackLayout>
+        <StackLayout Orientation="Horizontal" HorizontalOptions="Center" VerticalOptions="Center">
+            <Button Text="Среда" Padding="30" x:Name="WednesdayButton" 
+                    Clicked="OnButtonClicked" TextColor="Black" Margin="0" WidthRequest="200"
+                    BackgroundColor="OrangeRed" BorderWidth="1" BorderColor="Gray"></Button>
+            <Button Text="Четверг" Padding="30" x:Name="ThursdayButton" 
+                    Clicked="OnButtonClicked" TextColor="Black" Margin="0" WidthRequest="190"
+                    BackgroundColor="OrangeRed" BorderWidth="1" BorderColor="Gray"></Button>
+        </StackLayout>
+        <StackLayout Orientation="Horizontal" HorizontalOptions="Center" VerticalOptions="Center">
+            <Button Text="Пятница" Padding="30" x:Name="FridayButton"
+                    Clicked="OnButtonClicked" TextColor="Black" Margin="0" WidthRequest="200"
+                    BackgroundColor="OrangeRed" BorderWidth="1" BorderColor="Gray"></Button>
+            <Button Text="Суббота" Padding="30" x:Name="SaturdayButton" 
+                    Clicked="OnButtonClicked" TextColor="Black" Margin="0" WidthRequest="190"
+                    BackgroundColor="OrangeRed" BorderWidth="1" BorderColor="Gray"></Button>
+        </StackLayout>
     </StackLayout>
 
 </ContentPage>
