--- a/SecondTry/SecondTry/MainPage.xaml
+++ b/SecondTry/SecondTry/MainPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="SecondTry.MainPage">
+             x:Class="SecondTry.MainPage" 
+             BackgroundImageSource="GSUicon.png">
 
     <StackLayout Orientation="Vertical" Margin="0, 450, 0, 0">
         <StackLayout Orientation="Horizontal" HorizontalOptions="Center">
