--- a/SecondTry/SecondTry/PageFile.xaml
+++ b/SecondTry/SecondTry/PageFile.xaml
@@ -3,18 +3,20 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="SecondTry.PageFile"
              BackgroundImageSource="Plague.jpg">
-    <StackLayout>
-        <StackLayout>
-            <Label x:Name="DayOfWeek" TextColor="White" FontSize="30"></Label>
+    <StackLayout Orientation="Vertical" HorizontalOptions="Center" Spacing="0">
+        <StackLayout HorizontalOptions="Center" Margin="0, 300, 0, 0">
+            <Label x:Name="DayOfWeek" TextColor="White" FontSize="40" Padding="0" Margin="0"></Label>
         </StackLayout>
-        <StackLayout>
-            <Label x:Name="first" TextColor="White"></Label>
-            <Label x:Name="second" TextColor="White"></Label>
-            <Label x:Name="third" TextColor="White"></Label>
-            <Label x:Name="fourth" TextColor="White"></Label>
-        </StackLayout>
-        <StackLayout>
-            <Button x:Name="backButton" Clicked="BackButtonClick"></Button>
+        <StackLayout Orientation="Horizontal">
+            <StackLayout Orientation="Vertical">
+                <Label x:Name="first" TextColor="White"></Label>
+                <Label x:Name="second" TextColor="White"></Label>
+                <Label x:Name="third" TextColor="White"></Label>
+                <Label x:Name="fourth" TextColor="White"></Label>
+            </StackLayout>
+            <StackLayout>
+                <Button x:Name="backButton" Clicked="BackButtonClick"></Button>
+            </StackLayout>
         </StackLayout>
     </StackLayout>
 </ContentPage>
